--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
     "express": "^4.21.1",
     "ioredis": "^5.4.2",
     "mongoose": "^8.8.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "redis": "^4.7.0",
+    "stripe": "^17.7.0",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/ioredis": "^4.28.10",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.0",
+    "@types/stripe": "^8.0.416",
+    "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.2",
     "nodemon": "^3.1.7",
     "typescript": "^5.7.2"
